Make sure words are aligned correct for rtl

--- a/h5p-bildetema-words-topic-image/src/components/TopicImageWordAudio/TopicImageWordAudio.module.scss
+++ b/h5p-bildetema-words-topic-image/src/components/TopicImageWordAudio/TopicImageWordAudio.module.scss
@@ -33,7 +33,6 @@
 .word_label {
   font-size: $font-size-24;
   line-height: 1.4;
-  text-align: left;
 
   @media print {
     line-height: 1.2;
